--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 .carousel {
   width: 100%; }
 
+.first {
+  margin-bottom: 20px; }
+
 .card-title {
   color: white;
   text-align: center; }
@@ -50,19 +53,37 @@ button.btn.btn-link.collapsed {
 .mobile-test,
 .desktop-test {
   width: 100%;
-  height: 100px; }
+  height: 100px;
+  background-color: blue; }
 
-@media all and (min-width: 992px) {
-  .mobile-test {
-    display: none; }
-  .desktop-test {
-    display: block; }
-  .pro-desk {
-    display: block; } }
+.desktop-test {
+  display: block; }
+
+.pro-desk {
+  display: block; }
 
 .cardgap {
   background-color: #43b02a;
   height: 50px; }
+
+.container {
+  padding-left: 0; }
+
+.desktopview {
+  display: none; }
+
+@media (min-width: 1350px) {
+  .desktopview {
+    display: block; }
+  .mobileview {
+    color: yellow;
+    display: none; } }
+
+.blankline {
+  color: white; }
+
+.card {
+  background-color: transparent; }
 
 .contain {
   margin: 0 auto;
