added auto height

--- a/scss/_product.scss
+++ b/scss/_product.scss
@@ -1,5 +1,8 @@
 // don't forget to leave comments while coding
 // and have fun!
+.product{
+  height:auto !important;
+}
 .first {
   margin-bottom: 20px;
 }
