--- a/css/main.css
+++ b/css/main.css
@@ -1,47 +1,48 @@
 .carousel {
   width: 100%; }
 
-.contai {
-  width: 100%; }
+.service {
+  max-width: 100%;
+  border: 2px solid black; }
 
-h1 {
-  text-align: center;
-  color: white; }
+.accordion {
+  margin: 3.8%; }
 
-.one {
+.logo {
   background-color: #006341; }
 
-.two {
+.web {
   background-color: #338267; }
 
-.three {
+.bcard {
   background-color: #66A18D; }
 
-.four {
+.brand {
   background-color: #A6C8BC; }
 
-.col-md-6 {
-  background-color: #E5EFEC;
-  color: black;
-  width: 50%;
-  display: flex;
-  justify-content: center; }
-
-.col-md-6 h1 {
-  color: #006341; }
-
-.col-md-6 p {
+h2 {
   text-align: center; }
 
-.image1 {
-  width: 100%; }
-
 button {
-  border-radius: 15px 50px 30px 5px;
-  float: right;
-  width: 15vw;
-  color: #003328;
-  background-color: #a6c8bc; }
+  color: black; }
+
+@media (min-width: 1200px) {
+  .accordion {
+    margin: 3.8%;
+    display: flex;
+    max-width: 100%; }
+  .accordion .card {
+    max-width: 80%;
+    flex-direction: row; }
+  .card-header {
+    max-width: 100%; }
+  .card-body {
+    max-width: 100%;
+    justify-content: center;
+    align-items: center; }
+  .card-body img {
+    align-content: center;
+    justify-content: center; } }
 
 .contain {
   margin: 0 auto;
