--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -1,49 +1,59 @@
-// don't forget to leave comments while coding
-// and have fun!
-.contai{
-  width:100%;
+
+
+
+.service{
+  max-width: 100%;
+  border: 2px solid black;
 }
-// .row .col{
-//
-//   border:1px solid black;
-//   color: white;
-//   align-items:left;
-// }
-h1{
-  text-align: center;
-  color: white;
+.accordion{
+    margin:3.8%;
 }
-.one{
+
+.logo {
   background-color: #006341;
 }
-.two{
-  background-color: #338267;}
-.three{
-  background-color: #66A18D;}
-.four{
+
+.web {
+  background-color: #338267;
+}
+
+.bcard {
+  background-color: #66A18D;
+}
+
+.brand {
   background-color: #A6C8BC;
 }
-.col-md-6{
-  background-color: #E5EFEC;
-  color: black;
-  width:50%;
-  display: flex;
-justify-content:center;
-}
-.col-md-6 h1{
-  color:#006341;
-}
-.col-md-6 p{
+
+h2 {
   text-align: center;
 }
 
-.image1{
-  width:100%;
+button {
+  color: black;
 }
-button{
-  border-radius: 15px 50px 30px 5px;
-  float: right;
-  width:15vw;
-  color: $darkAlgonquin-green;
-  background-color:$ag-tint35;
+
+@media (min-width: 1200px){
+.accordion {
+  margin:3.8%;
+    display: flex;
+    max-width: 100%;
+  }
+  .accordion .card{
+    max-width:80%;
+    flex-direction: row;
+    }
+  .card-header{
+    max-width: 100%;
+  }
+  .card-body{
+    max-width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-body img{
+    align-content: center;
+    justify-content: center;
+  }
+
 }
