--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+.disappear {
+  display: none; }
+
 body {
   background-color: white !important; }
 
@@ -13,19 +16,12 @@ body {
 
 .navbar {
   background-color: rgba(0, 0, 0, 0.9); }
-  .navbar a.navbar-brand {
-    display: none; }
-  .navbar .navbar-toggler {
-    display: flex;
-    align-items: center;
-    margin: 0 auto; }
-    .navbar .navbar-toggler .navbar-toggler-icon {
-      background-color: none;
-      align-items: center;
-      justify-content: center;
-      display: flex; }
-  .navbar .collapse .navbar-nav .nav-item .nav-link {
-    color: white; }
+
+.navbar-toggler .navbar-toggler-icon {
+  fill: white; }
+
+.collapse .navbar-nav .nav-item .nav-link {
+  color: white; }
 
 .bag {
   width: 30px;
@@ -74,7 +70,7 @@ body {
     display: flex;
     justify-content: center; }
   .home .visual .layout .part-left .carousel {
-    max-height: 700px;
+    max-height: 510px;
     overflow: hidden; }
     .home .visual .layout .part-left .carousel .carousel-inner .carousel-item {
       position: relative; }
@@ -111,6 +107,20 @@ body {
         display: none; }
 
 @media all and (min-width: 950px) {
+  navbar-nav {
+    display: flex;
+    justify-content: center; }
+  .home .visual .layout .part-left {
+    background-color: rgba(0, 0, 0, 0.9); }
+    .home .visual .layout .part-left .carousel {
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+  .disappear {
+    display: block; }
+  .shop {
+    display: none; }
   .navbar {
     width: 90%;
     margin: 0 auto; }
@@ -145,11 +155,14 @@ body {
       .page1 .logo img {
         width: 100%; }
     .page1 .media {
+      display: block;
       width: 60%;
       margin-left: 40%;
-      justify-self: flex-end; }
+      justify-self: flex-start; }
       .page1 .media img {
-        width: 100%; } }
+        width: 100%; }
+    .page1 .ACLogo img {
+      display: none; } }
 
 h2 {
   justify-content: left;
