--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -2,6 +2,9 @@
 // and have fun!
 
 // MOBILE
+.disappear{
+  display:none;
+}
 
 body{
   background-color: white !important;
@@ -23,19 +26,11 @@ body{
   // height: 82px;
   // .navbar-brand {
 
-  // }
-  a.navbar-brand{
-    display:none;
   }
   .navbar-toggler {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
+  
     .navbar-toggler-icon {
-      background-color: none;
-      align-items: center;
-      justify-content: center;
-      display: flex;
+    fill: white;
 
     }
   }
@@ -49,7 +44,7 @@ body{
       }
     }
   }
-  }
+  
 
   .bag {
     width: 30px;
@@ -97,12 +92,11 @@ align-self: flex-start;
   align-items: center;
   .logo {
     display: none;
-
   }
   .media {
     display: none;
-    }
   }
+}
 
 // home
 .home {
@@ -123,7 +117,7 @@ align-self: flex-start;
     }
     
     .carousel {
-      max-height: 700px;
+      max-height: 510px;
       overflow: hidden;
       .carousel-inner{
         .carousel-item{
@@ -181,6 +175,43 @@ align-self: flex-start;
 // // DESKTOP VIEW
 
 @media all and (min-width: 950px) {
+  navbar-nav{
+    // background-color:red !important;
+    display: flex;
+    justify-content: center;
+  }
+  .home{
+    .visual{
+      .layout{
+        .part-left{
+          background-color:$charcoal;
+          .carousel{
+            height:100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            // .carousel-inner{
+            //   height:100%;
+            //   .carousel-item{
+            //     height:100%;
+            //   }
+            // }
+          }
+        }
+      }
+      
+    }
+    
+  }
+  
+  
+  
+  .disappear{
+    display:block;
+  }
+  .shop{
+    display:none;
+  }
   .navbar{
     width:90%;
     margin:0 auto;
@@ -230,14 +261,22 @@ align-self: flex-start;
       }
     }
     .media {
+      display: block;
       width:60%;
       margin-left:40%;
-      justify-self: flex-end;
+      justify-self: flex-start;
       img {
         width:100%;
       }
     }
+    .ACLogo{
+      img{
+        display: none;
+      }
+    
+    }
   }
+
 }
 
 // .carousel-inner{
