--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -178,7 +178,7 @@ align-self: flex-start;
   navbar-nav{
     // background-color:red !important;
     display: flex;
-    justify-content: center;
+    justify-content: center;s
   }
   .home{
     .visual{
