fix breakpoint img problem

--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -15,7 +15,7 @@
       flex-direction: column;
       .btnArea {
         width: 100%;
-        height: 10%;
+        height: 100%;
         display: flex;
         align-items: center;
         justify-content: space-evenly;
@@ -55,6 +55,7 @@
         }
       }
       .bgpic {
+        display: none;
         width: 100%;
         height: 90%;
         background-color: #fff;
@@ -244,6 +245,15 @@
       .con-cont {
         width: 50%;
         height: 100%;
+      }
+      .change {
+        .btnArea {
+          height: 10%;
+        }
+        .bgpic {
+          display: flex;
+          height: 90%;
+        }
       }
     }
   }
