--- a/css/main.css
+++ b/css/main.css
@@ -174,7 +174,7 @@ table {
     flex-direction: column; }
     .contact .visual .change .btnArea {
       width: 100%;
-      height: 10%;
+      height: 100%;
       display: flex;
       align-items: center;
       justify-content: space-evenly; }
@@ -207,6 +207,7 @@ table {
           background-image: url(/image/contact/change/conInfo.png);
           background-size: cover; }
     .contact .visual .change .bgpic {
+      display: none;
       width: 100%;
       height: 90%;
       background-color: #fff; }
@@ -345,7 +346,12 @@ table {
     .contact .visual .change,
     .contact .visual .con-cont {
       width: 50%;
-      height: 100%; } }
+      height: 100%; }
+    .contact .visual .change .btnArea {
+      height: 10%; }
+    .contact .visual .change .bgpic {
+      display: flex;
+      height: 90%; } }
 
 .formIMG {
   background-image: url(/image/contact/background/form.jpg);
