--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,9 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+html {
+  scroll-behavior: smooth; }
+
 .contain {
   margin: 0 auto;
   width: 90%;
@@ -134,6 +137,16 @@ table {
   .contain .divider {
     width: 100%;
     height: 62px; }
+
+.footer {
+  width: 100%;
+  height: 60px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.9); }
 
 @media all and (min-width: 576px) {
   .contain {
@@ -569,13 +582,11 @@ button.btn.btn-link.collapsed {
       .contact .visual .con-cont .info-space .intro {
         justify-content: center;
         align-items: center;
-        height: 100px;
-        background-color: yellow; }
+        height: 100px; }
         .contact .visual .con-cont .info-space .intro span {
           font-size: 1.5rem; }
       .contact .visual .con-cont .info-space .content {
-        height: 200px;
-        background-color: red; }
+        height: 200px; }
         .contact .visual .con-cont .info-space .content .social {
           width: 100%;
           display: flex;
@@ -585,11 +596,17 @@ button.btn.btn-link.collapsed {
             width: 80px;
             height: 80px;
             margin: 0 10px;
-            background-color: #fff; }
+            background-size: contain;
+            cursor: pointer; }
+          .contact .visual .con-cont .info-space .content .social .ig {
+            background-image: url(/image/contact/social/ig.jpg); }
+          .contact .visual .con-cont .info-space .content .social .fb {
+            background-image: url(/image/contact/social/facebook.jpg); }
+          .contact .visual .con-cont .info-space .content .social .tw {
+            background-image: url(/image/contact/social/twitter.png); }
 
 @media all and (min-width: 992px) {
   .contact .visual {
-    background-color: yellow;
     display: flex;
     flex-direction: row; }
     .contact .visual .change,
