--- a/scss/main.scss
+++ b/scss/main.scss
@@ -134,6 +134,10 @@ table {
 html {
   scroll-behavior: smooth;
 }
+h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
 // main layout
 .contain {
   margin: 0 auto;
