--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -154,6 +154,7 @@
         }
       }
       .map-area {
+        margin-top: 20px;
         width: 100%;
         height: auto;
         // margin: 0 auto;
