--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,163 @@
-.carousel {
-  width: 100%; }
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol,
+ul {
+  list-style: none; }
+
+blockquote,
+q {
+  quotes: none; }
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.contain {
+  margin: 0 auto;
+  width: 90%;
+  height: 140vw;
+  border: 1px solid black; }
+  .contain .divider {
+    width: 100%;
+    height: 62px; }
+
+@media all and (min-width: 576px) {
+  body {
+    background-color: yellow; }
+  .contain {
+    height: 100vw; } }
+
+@media all and (min-width: 768px) {
+  body {
+    background-color: red; }
+  .contain {
+    height: 80vw; } }
+
+@media all and (min-width: 992px) {
+  body {
+    background-color: blue; }
+  .contain {
+    height: 70vw; } }
+
+@media (min-width: 1200px) {
+  body {
+    background-color: green; }
+  .contain {
+    height: 45vw; } }
 
 .product {
   height: auto !important; }
@@ -47,18 +205,10 @@ button.btn.btn-link.collapsed {
   margin-bottom: 0 !important;
   text-align: center; }
 
-/* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+.pro-desk {
+  display: none; }
+
+.test-area {
   display: block; }
 
 .mobile-test,
@@ -96,42 +246,6 @@ section {
 .card {
   background-color: transparent; }
 
-.contain {
-  margin: 0 auto;
-  width: 90%;
-  height: 140vw;
-  border: 1px solid black; }
-  .contain .divider {
-    width: 100%;
-    height: 62px; }
-
-@media all and (min-width: 576px) {
-  body {
-    background-color: yellow; }
-  .contain {
-    height: 100vw; } }
-
-@media all and (min-width: 768px) {
-  body {
-    background-color: red; }
-  .contain {
-    height: 80vw; } }
-
-@media all and (min-width: 992px) {
-  body {
-    background-color: blue; }
-  .contain {
-    height: 70vw; } }
-
-@media (min-width: 1200px) {
-  body {
-    background-color: green; }
-  .contain {
-    height: 45vw; } }
-
-.carousel {
-  width: 100%; }
-
 .contact .visual {
   display: flex;
   flex-direction: column;
@@ -144,7 +258,7 @@ section {
     flex-direction: column; }
     .contact .visual .change .btnArea {
       width: 100%;
-      height: 10%;
+      height: 100%;
       display: flex;
       align-items: center;
       justify-content: space-evenly; }
@@ -177,6 +291,7 @@ section {
           background-image: url(/image/contact/change/conInfo.png);
           background-size: cover; }
     .contact .visual .change .bgpic {
+      display: none;
       width: 100%;
       height: 90%;
       background-color: #fff; }
@@ -315,7 +430,12 @@ section {
     .contact .visual .change,
     .contact .visual .con-cont {
       width: 50%;
-      height: 100%; } }
+      height: 100%; }
+    .contact .visual .change .btnArea {
+      height: 10%; }
+    .contact .visual .change .bgpic {
+      display: flex;
+      height: 90%; } }
 
 .formIMG {
   background-image: url(/image/contact/background/form.jpg);
