--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,8 @@
   border: 2px solid black; }
 
 .accordion {
-  margin: 3.8%; }
+  margin: 3.8%;
+  font-family: arial; }
 
 .logo {
   background-color: #006341; }
@@ -23,30 +24,45 @@
 h2 {
   text-align: center; }
 
-button {
-  color: black; }
+.collapsed {
+  color: black;
+  font-size: 2rem; }
 
 @media (min-width: 1200px) {
   .accordion {
     margin: 3.8%;
+    margin-left: 10%;
     display: flex;
-    max-width: 100%; }
-  .accordion .card {
     max-width: 80%;
+    justify-content: space-around; }
+  h2 {
+    text-align: left;
+    font-size: 2rem; }
+  .accordion .card {
+    max-width: 100%;
     flex-direction: row; }
   .card-header {
     max-width: 100%; }
   .card-body {
     max-width: 100%;
     justify-content: center;
-    align-items: center; }
-  .card-body img {
-    align-content: center;
-    justify-content: center; } }
+    align-items: center;
+    text-align: center; }
+  h2 {
+    text-align: center; } }
 
 .align {
   margin-left: 30%;
   margin-right: auto; }
+
+.btncenter {
+  border-radius: 10%;
+  background-color: #59A5FF;
+  width: 25%;
+  color: #006341; }
+
+.card-body p {
+  font-size: 1.2  rem; }
 
 .contain {
   margin: 0 auto;
