--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -7,6 +7,7 @@
 }
 .accordion{
     margin:3.8%;
+    font-family: arial;
 }
 
 .logo {
@@ -29,16 +30,22 @@ h2 {
   text-align: center;
 }
 
-button {
+.collapsed{
   color: black;
+  font-size: 2rem;
 }
-
 @media (min-width: 1200px){
 .accordion {
   margin:3.8%;
   margin-left: 10%;
     display: flex;
     max-width: 80%;
+    justify-content: space-around;
+
+  }
+  h2{
+    text-align: left;
+    font-size: 2rem;
   }
   .accordion .card{
     max-width:100%;
@@ -51,16 +58,26 @@ button {
     max-width: 100%;
     justify-content: center;
     align-items: center;
+    text-align: center;;
   }
+  h2{text-align: center;;}
   .card-body img{
-    align-content: center;
-    justify-content: center;
-  }
+
+      }
 
 }
 
-}
+
 .align{
   margin-left:30%;
     margin-right: auto;
+}
+.btncenter{
+  border-radius: 10%;
+  background-color: #59A5FF;
+  width:25%;
+  color:$algonquin-green;
+}
+.card-body p{
+  font-size: 1.2  rem;
 }
