--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -10,23 +10,23 @@
     font-family: arial;
 }
 
-.logo {
+.logo-ss {
   background-color: #006341;
 }
 
-.web {
+.web-ss {
   background-color: #338267;
 }
 
-.bcard {
+.bcard-ss {
   background-color: #66A18D;
 }
 
-.brand {
+.brand-ss {
   background-color: #A6C8BC;
 }
 
-h2 {
+.word{
   text-align: center;
 }
 
@@ -54,14 +54,14 @@ h2 {
   .card-header{
     max-width: 100%;
   }
-  .card-body{
+  .same{
     max-width: 100%;
     justify-content: center;
     align-items: center;
     text-align: center;;
   }
   h2{text-align: center;;}
-  .card-body img{
+  .same img{
 
       }
 
@@ -78,6 +78,10 @@ h2 {
   width:25%;
   color:$algonquin-green;
 }
-.card-body p{
-  font-size: 1.2  rem;
+.btncenter:hover{
+  background-color: white;
+  border:1px solid black;
+}
+.same p{
+  font-size: 1.25rem;
 }
