--- a/css/main.css
+++ b/css/main.css
@@ -408,6 +408,9 @@ h2 {
 .same p {
   font-size: 1.25rem; }
 
+.card {
+  background-color: green; }
+
 .product {
   height: auto !important; }
 
@@ -418,7 +421,7 @@ h2 {
   color: white;
   text-align: center; }
 
-.card-body {
+.card-bodya {
   background-color: #909390; }
 
 .card-text {
