--- a/css/main.css
+++ b/css/main.css
@@ -266,9 +266,12 @@ body {
     color: white;
     height: 510px; }
     .home .visual .layout .part-right .about h3 {
-      padding-top: 25px;
+      font-size: 1.8rem;
+      padding-top: 45px;
       padding-left: 30px; }
     .home .visual .layout .part-right .about p {
+      font-size: 1.2rem;
+      line-height: 25px;
       padding-top: 20px;
       padding-left: 30px;
       padding-right: 30px;
@@ -277,6 +280,8 @@ body {
         display: none; }
 
 @media all and (min-width: 950px) {
+  .nav-item {
+    margin-right: 55% !important; }
   navbar-nav {
     display: flex;
     justify-content: center; }
