--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -1,13 +1,39 @@
-
-
 @import"node_modules/bootstrap/scss/bootstrap.scss";
 .body{
   flex: 1 1 auto;
   padding: $card-spacer-x;
   color: $card-color;
 }
+.cas{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0; // See https://github.com/twbs/bootstrap/pull/22740#issuecomment-305868106
+  word-wrap: break-word;
+  background-color: $card-bg;
+  background-clip: border-box;
+  border: $card-border-width solid $card-border-color;
+  @include border-radius($card-border-radius);
+
+  > hr {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  > .list-group:first-child {
+    .list-group-item:first-child {
+      @include border-top-radius($card-border-radius);
+    }
+  }
+
+  > .list-group:last-child {
+    .list-group-item:last-child {
+      @include border-bottom-radius($card-border-radius);
+    }
+  }
+}
 .accr{
-  > .card {
+  > .cas {
     overflow: hidden;
 
     &:not(:first-of-type) {
@@ -115,7 +141,7 @@
     text-align: left;
     font-size: 2rem;
   }
-  .accr .card{
+  .accr .cas{
     max-width:100%;
     flex-direction: row;
     }
