--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -1,10 +1,73 @@
-.Services {
+@import"node_modules/bootstrap/scss/bootstrap.scss";
+.body{
+  flex: 1 1 auto;
+  padding: $card-spacer-x;
+  color: $card-color;
+}
+.cas{
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0; // See https://github.com/twbs/bootstrap/pull/22740#issuecomment-305868106
+  word-wrap: break-word;
+  background-color: $card-bg;
+  background-clip: border-box;
+  border: $card-border-width solid $card-border-color;
+  @include border-radius($card-border-radius);
+
+  > hr {
+    margin-right: 0;
+    margin-left: 0;
+  }
+
+  > .list-group:first-child {
+    .list-group-item:first-child {
+      @include border-top-radius($card-border-radius);
+    }
+  }
+
+  > .list-group:last-child {
+    .list-group-item:last-child {
+      @include border-bottom-radius($card-border-radius);
+    }
+  }
+}
+.accr{
+  > .cas {
+    overflow: hidden;
+
+    &:not(:first-of-type) {
+      .card-header-n:first-child {
+        @include border-radius(0);
+      }
+
+      &:not(:last-of-type) {
+        border-bottom: 0;
+        @include border-radius(0);
+      }
+    }
+
+    &:first-of-type {
+      border-bottom: 0;
+      @include border-bottom-radius(0);
+    }
+
+    &:last-of-type {
+      @include border-top-radius(0);
+    }
+
+    .card-header-n {
+      margin-bottom: -$card-border-width;
+    }
+  }
+}
+.service{
   max-width: 100%;
   border: 2px solid black;
 }
-.accordion {
-  margin: 3.8%;
-  font-family: arial;
+.accr{
+    margin:3.8%;
+    font-family: arial;
 }
 
 .logo-ss {
@@ -16,69 +79,118 @@
 }
 
 .bcard-ss {
-  background-color: #66a18d;
+  background-color: #66A18D;
 }
 
 .brand-ss {
-  background-color: #a6c8bc;
+  background-color: #A6C8BC;
 }
 
-.word {
+.word{
   text-align: center;
 }
-.collapsed:active {
-  color: white;
-}
-.collapsed {
-  color: white;
+
+.collapsed{
+  color: black;
   font-size: 2rem;
+
 }
-@media (min-width: 1200px) {
-  .accordion {
-    margin: 3.8%;
-    margin-left: 10%;
+.btnn{
+  display: inline-block;
+  color: $body-color;
+  text-align: center;
+  vertical-align: middle;
+  user-select: none;
+  background-color: transparent;
+  border: $btn-border-width solid transparent;
+
+}
+.btnn{
+
+  text-decoration: $link-decoration;
+
+  @include hover {
+    color:$newgrowth-green;
+    text-decoration: $link-hover-decoration;
+  }
+
+  &:focus,
+  &.focus {
+    text-decoration: $link-hover-decoration;
+    box-shadow: none;
+  }
+
+  &:disabled,
+  &.disabled {
+    color: $btn-link-disabled-color;
+    pointer-events: none;
+  }
+
+}
+
+@media (min-width: 1200px){
+.accr {
+  margin:3.8%;
+  margin-left: 10%;
     display: flex;
     max-width: 80%;
     justify-content: space-around;
+
   }
-  h2 {
+  .mb-0{
     text-align: left;
     font-size: 2rem;
   }
-  .accordion .card {
-    max-width: 100%;
+  .accr .cas{
+    max-width:100%;
     flex-direction: row;
+    }
+  .card-header-n{
+    padding: $card-spacer-y $card-spacer-x;
+   margin-bottom: 0; // Removes the default margin-bottom of <hN>
+   color: $card-cap-color;
+   background-color: $card-cap-bg;
+   border-bottom: $card-border-width solid $card-border-color;
+
+   &:first-child {
+     @include border-radius($card-inner-border-radius $card-inner-border-radius 0 0);
+   }
+
+   + .list-group {
+     .list-group-item:first-child {
+       border-top: 0;
+     }
+   }
   }
-  .card-header {
-    max-width: 100%;
-  }
-  .same {
+  .same{
     max-width: 100%;
     justify-content: center;
     align-items: center;
-    text-align: center;
+    text-align: center;;
   }
-  h2 {
-    text-align: center;
-  }
-  // .same img {
-  // }
+  h2{text-align: center;;}
+  .same img{
+
+      }
+
 }
 
-.align {
-  margin-left: 30%;
-  margin-right: auto;
+
+.align{
+  margin-left:30%;
+    margin-right: auto;
 }
-.btncenter {
+.btncenter{
   border-radius: 10%;
-  background-color: #59a5ff;
-  width: 25%;
-  color: $algonquin-green;
+  background-color: #59A5FF;
+  width:25%;
+
 }
-.btncenter:hover {
+.btncenter:hover{
   background-color: white;
-  border: 1px solid black;
+  border:1px solid black;
+  color:$algonquin-green;
 }
-.same p {
+.same p{
   font-size: 1.25rem;
 }
