--- a/scss/_service.scss
+++ b/scss/_service.scss
@@ -139,7 +139,7 @@
     font-size: 2rem;
   }
   .accr .cas{
-    max-width:100%; 
+    max-width:100%;
     flex-direction: row;
     justify-content: space-around;
     }
@@ -166,12 +166,9 @@
     align-items: center;
     text-align: center;;
   }
-  h2{text-align: center;;}
-  .same img{
-
-      }
-
-}
+  h2
+  {text-align: center;
+  }
 
 
 .align{
